--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "electron-ftp-app",
   "version": "0.0.1",
   "author": "Zhurui <zhurui@cloudwalk.cn>",
-  "description": "An electron-vue project",
+  "description": "An electron-vue ftp upload file project",
   "license": null,
   "main": "./dist/electron/main.js",
   "scripts": {
@@ -22,6 +22,12 @@
     "directories": {
       "output": "build"
     },
+    "publish": [
+      {
+        "provider": "generic",
+        "url": "http://localhost:8080/version/"
+      }
+    ],
     "files": [
       "dist/electron/**/*"
     ],
@@ -53,6 +59,7 @@
   "dependencies": {
     "@riophae/vue-treeselect": "^0.0.38",
     "axios": "^0.18.0",
+    "electron-updater": "^4.0.6",
     "element-ui": "^2.4.11",
     "ftp": "^0.3.10",
     "multer": "^1.4.1",
