--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "ftp": "^0.3.10",
     "js-md5": "^0.7.3",
     "multer": "^1.4.1",
+    "nodejs-websocket": "^1.7.2",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   },
