--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FtpFileTransfer",
-  "version": "1.0.0",
+  "version": "4.1.5",
   "author": "CloudWalk <zhurui@cloudwalk.cn>",
   "description": "An electron-vue ftp upload file project",
   "license": null,
@@ -17,7 +17,7 @@
     "postinstall": ""
   },
   "build": {
-    "productName": "FtpFileTransfer",
+    "productName": "Ftp-File-Transfer",
     "appId": "com.example.yourapp",
     "directories": {
       "output": "build"
@@ -84,7 +84,7 @@
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^4.1.4",
+    "electron": "^0.1.4",
     "electron-builder": "^20.19.2",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
