--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FtpFileTransfer",
-  "version": "4.1.5",
+  "version": "5.0.0",
   "author": "CloudWalk <zhurui@cloudwalk.cn>",
   "description": "An electron-vue ftp upload file project",
   "license": null,
@@ -84,10 +84,11 @@
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^0.1.4",
+    "electron": "^4.1.4",
     "electron-builder": "^20.19.2",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
+    "electron-log": "^3.0.8",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
