--- a/package.json
+++ b/package.json
@@ -59,11 +59,11 @@
   "dependencies": {
     "@riophae/vue-treeselect": "^0.0.38",
     "axios": "^0.18.0",
-    "electron-updater": "^4.0.6",
-    "element-ui": "^2.4.11",
+    "electron-updater": "^4.3.9",
+    "element-ui": "^2.15.13",
     "ftp": "^0.3.10",
     "js-md5": "^0.7.3",
-    "multer": "^1.4.1",
+    "multer": "^1.4.5-lts.1",
     "nodejs-websocket": "^1.7.2",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
@@ -84,16 +84,16 @@
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^4.1.4",
-    "electron-builder": "^20.19.2",
-    "electron-debug": "^1.5.0",
-    "electron-devtools-installer": "^2.2.4",
-    "electron-log": "^3.0.8",
+    "electron": "^19.0.8",
+    "electron-builder": "^23.6.0",
+    "electron-debug": "^3.2.0",
+    "electron-devtools-installer": "^3.2.0",
+    "electron-log": "^2.2.17",
+    "mini-css-extract-plugin": "^0.4.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "less": "^3.9.0",
+    "less": "^3.0.4",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "0.4.0",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
     "style-loader": "^0.21.0",
@@ -104,7 +104,7 @@
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
+    "webpack-dev-server": "^4.11.1",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.3"
   }
